--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -15,19 +15,26 @@ title: 5. Exploration of the Formative Learning Design Process
     -   [Research Questions - April
         2024](#research-questions---april-2024)
     -   [Chapter Introduction](#chapter-introduction)
+        -   [MOVED LINK - Applying activity theory to surface
+            contradictions and design tensions experienced by
+            participants and
+            facilitator/s](#moved-link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
     -   [Vignette and broad analysis using an analysis of activity
         systems](#vignette-and-broad-analysis-using-an-analysis-of-activity-systems)
         -   [Context of vignette](#context-of-vignette)
-        -   [Vignette summary](#vignette-summary)
-            -   [LINK - Applying activity theory to surface
-                contradictions and design tensions experienced by
-                participants and
-                facilitator/s](#link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
+        -   [Exploring the wider of two activity
+            systems](#exploring-the-wider-of-two-activity-systems)
+        -   [Exploring the 2nd activity
+            system](#exploring-the-2nd-activity-system)
+            -   [Describing the complextity of the object at both
+                Levels](#describing-the-complextity-of-the-object-at-both-levels)
     -   [Narrative exploration of
         contradictions](#narrative-exploration-of-contradictions)
     -   [C1 - contradictions involving the use of game programming and
         asset authoring
         tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
+        -   [Summary of challenge caused by contradictions in a
+            nutshell](#summary-of-challenge-caused-by-contradictions-in-a-nutshell)
         -   [Using a starter game template within a code
             playground](#using-a-starter-game-template-within-a-code-playground)
             -   [Code playground.](#code-playground.)
@@ -40,17 +47,19 @@ title: 5. Exploration of the Formative Learning Design Process
             -   [Use of game assets](#use-of-game-assets)
             -   [Distributed approach to asset
                 creation](#distributed-approach-to-asset-creation)
-    -   [C2 - Participant conflict associated with project navigation
-        and use of
-        documentation](#c2---participant-conflict-associated-with-project-navigation-and-use-of-documentation)
-        -   [Narrative on the evolution of resources during
-            P2](#narrative-on-the-evolution-of-resources-during-p2)
+        -   [Resolution of C1 / LINK](#resolution-of-c1-link)
+    -   [C2 - Contradictions associated with project navigation and use
+        of
+        documentation](#c2---contradictions-associated-with-project-navigation-and-use-of-documentation)
+        -   [Description of contradictions related to
+            docs](#description-of-contradictions-related-to-docs)
         -   [Quick Start Cards](#quick-start-cards)
-        -   [Code snippet examples](#code-snippet-examples)
         -   [Structuring instructional tutorial
             chapters](#structuring-instructional-tutorial-chapters)
+        -   [Code snippet examples](#code-snippet-examples)
         -   [Theming the a collection of game design patterns to aid
             navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
+        -   [Resolution of C2](#resolution-of-c2)
     -   [C3 - Responding to tensions and barriers in cultural aspects of
         the game making
         activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
@@ -95,7 +104,7 @@ title: 5. Exploration of the Formative Learning Design Process
         -   [Shared object as GDP move to Ch
             5](#shared-object-as-gdp-move-to-ch-5)
         -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
-
+        -   [Operations / fluidity](#operations-fluidity)
 
 # Exploration of the Formative Learning Design Process
 
@@ -641,17 +650,19 @@ https://web.archive.org/web/20180426051205/http://phaser.io/tutorials/making-you
 
 ## C2 - Contradictions associated with project navigation and use of documentation
 
-### Description of contradictions related to docs
+### Description of contradictions related to documentation
 
-The previous section addresses changes to primary tools used to create game code and assets and response to the emerging tensions expereienced by participants in P1.
+<!-- The previous section addresses changes to primary tools used to create game code and assets and response to the emerging tensions experienced by participants in P1. -->
 
-The advantages of designing scaffolding within primary tool use rather than secondary tools, is that the guidance is built into the production process in a way which aligns with microworld concepts. This has the potendial to thus reducing dependancy on facilitator instruction. In this design, affordances were chosen to supporting the Modify stage of UMC.
+The design of the in-tool scaffolding within primary tool outlined in the previous section aligns with microworld concepts [@laurillard2020significance] of affordances guiding learners towards the exploration of key concepts and reduced reliance on facilitator instruction in the use and modify stage of a UMC approach. However, these design changes did not aid participants wanting to implement new features or add code structures into their game, as aligned with the _Create_ stage of UMC.
 
+As outlined above in P1 participants created a wish list of new features they wanted to add to each game. My attempts to support these requests in sessions without would involve my researching developer focused documentation and trying to adapt code examples from the phaser community. This process was time consuming and led to participant frustration, as I had limited time to work on each project. My response was to produced a variety of supporting documents and processes which were created and shared with participants in a responsive way via print outs and online google  work format documents.
 
+This piecemeal approach to documentation, especially when combined with the disparate approach to graphical and audio asset creation, had resulted in an overly complex object.
 
-However, these design changes did not aid participants wanted to create new features or code structures in their game. In P1 and early in P2 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair.
+In the development period (D1) between P1 and P2 I undertook extensive planning of both the starter template and documentation processes to try to simplify and scaffold the learner focused experience but retain the focus on learner choice. The tension between learner agency and clarity of instruction and support reoccurs consistently in my notes at this time.  By the beginning of P2 I had a prototype system to present the documentation in a consistent way. The following section details this process.
 
-The previous stage had created a variety of supporting documents and processes which were created and shared with participants in a responsive way via print outs and online google work format documents. At the at the start of P2 I began to plan a system to present the documentation in a consistent and responsive way.
+### How it as done  
 
 I also began to try to theme these new requests for features at some point (early stages of P2) in this process, in my notes I begin to frame these new request as game design patterns, and try to theme them.
 
@@ -709,8 +720,6 @@ To address the limit of one-to-one facilitator support to seed the starting proc
 
 MOVE SOME OF THE TEXT BELOW UP
 
-
-
 For each code example I created descriptive step-by-step documentation which in P2 were developed into chapters of an online book [^9]. Each code snippet linked to a descriptive chapter. These chapters attempted to balance an informal, hands-on approach over pre-teaching concepts, with the request from some from parents in the feedback to P1 (see appendix 4.x) to provide background concepts and explanations of coding constructs. To address this tension, in addition to self-contained chapter focused on instrumental code changes needed to implement game features, I created opening chapters of the online manual which were more traditional in format and explained underlying concepts that the starting template had initially abstracted away from the participants.
 
 ### Code snippet examples
@@ -743,8 +752,6 @@ Interestingly, the online menus was not used by participants in any regular or c
 
 
 ### Theming the a collection of game design patterns to aid navigation
-
-
 
 Introducing documentation created additional tensions in the learning activity, specifically, I observed users failing or struggling to find the right resources online. This prompted me to design and introduce a themed hub for both snippets and tutorial chapters. My aim was to mitigate potential learner alienation from unfamiliar technical documentation through accessible design and to relating documentation to participants existing gameplay experience rather than underlying coding constructs. While time consuming, the process of aligning documentation, code snippets with more general concepts of game analysis, served to simplify the navigation of documentation. The guiding principle is that key affordances of the supporting secondary stimuli are designed to closely align with the objectives of leading activity at the predominant scope of activity.In the language of the theoretical framework, I explore the process of working with GPDs as a germ cell of the overall game making activity.
 
