--- a/_posts/thesis_chapters/tocs/2024-10-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-10-5-Design.md_toc.md
@@ -3,19 +3,26 @@
     -   [Research Questions - April
         2024](#research-questions---april-2024)
     -   [Chapter Introduction](#chapter-introduction)
+        -   [MOVED LINK - Applying activity theory to surface
+            contradictions and design tensions experienced by
+            participants and
+            facilitator/s](#moved-link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
     -   [Vignette and broad analysis using an analysis of activity
         systems](#vignette-and-broad-analysis-using-an-analysis-of-activity-systems)
         -   [Context of vignette](#context-of-vignette)
-        -   [Vignette summary](#vignette-summary)
-            -   [LINK - Applying activity theory to surface
-                contradictions and design tensions experienced by
-                participants and
-                facilitator/s](#link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
+        -   [Exploring the wider of two activity
+            systems](#exploring-the-wider-of-two-activity-systems)
+        -   [Exploring the 2nd activity
+            system](#exploring-the-2nd-activity-system)
+            -   [Describing the complextity of the object at both
+                Levels](#describing-the-complextity-of-the-object-at-both-levels)
     -   [Narrative exploration of
         contradictions](#narrative-exploration-of-contradictions)
     -   [C1 - contradictions involving the use of game programming and
         asset authoring
         tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
+        -   [Summary of challenge caused by contradictions in a
+            nutshell](#summary-of-challenge-caused-by-contradictions-in-a-nutshell)
         -   [Using a starter game template within a code
             playground](#using-a-starter-game-template-within-a-code-playground)
             -   [Code playground.](#code-playground.)
@@ -28,17 +35,19 @@
             -   [Use of game assets](#use-of-game-assets)
             -   [Distributed approach to asset
                 creation](#distributed-approach-to-asset-creation)
-    -   [C2 - Participant conflict associated with project navigation
-        and use of
-        documentation](#c2---participant-conflict-associated-with-project-navigation-and-use-of-documentation)
-        -   [Narrative on the evolution of resources during
-            P2](#narrative-on-the-evolution-of-resources-during-p2)
+        -   [Resolution of C1 / LINK](#resolution-of-c1-link)
+    -   [C2 - Contradictions associated with project navigation and use
+        of
+        documentation](#c2---contradictions-associated-with-project-navigation-and-use-of-documentation)
+        -   [Description of contradictions related to
+            docs](#description-of-contradictions-related-to-docs)
         -   [Quick Start Cards](#quick-start-cards)
-        -   [Code snippet examples](#code-snippet-examples)
         -   [Structuring instructional tutorial
             chapters](#structuring-instructional-tutorial-chapters)
+        -   [Code snippet examples](#code-snippet-examples)
         -   [Theming the a collection of game design patterns to aid
             navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
+        -   [Resolution of C2](#resolution-of-c2)
     -   [C3 - Responding to tensions and barriers in cultural aspects of
         the game making
         activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
@@ -83,3 +92,4 @@
         -   [Shared object as GDP move to Ch
             5](#shared-object-as-gdp-move-to-ch-5)
         -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
+        -   [Operations / fluidity](#operations-fluidity)
