--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -658,31 +658,28 @@ The design of the in-tool scaffolding within primary tool outlined in the previo
 
 As outlined above in P1 participants created a wish list of new features they wanted to add to each game. My attempts to support these requests in sessions without would involve my researching developer focused documentation and trying to adapt code examples from the phaser community. This process was time consuming and led to participant frustration, as I had limited time to work on each project. My response was to produced a variety of supporting documents and processes which were created and shared with participants in a responsive way via print outs and online google  work format documents.
 
-This piecemeal approach to documentation, especially when combined with the disparate approach to graphical and audio asset creation, had resulted in an overly complex object.
+**Summary of the contractions**
 
-In the development period (D1) between P1 and P2 I undertook extensive planning of both the starter template and documentation processes to try to simplify and scaffold the learner focused experience but retain the focus on learner choice. The tension between learner agency and clarity of instruction and support reoccurs consistently in my notes at this time.  By the beginning of P2 I had a prototype system to present the documentation in a consistent way. The following section details this process.
+We can envisage the contraction involving my lack of time as a tension between community and objective on the level of the GDP implementation.
 
-### How it as done  
+Additionally , the piecemeal approach to documentation, especially when combined with the disparate approach to graphical and audio asset creation, had resulted in an overly complex object.
 
-I also began to try to theme these new requests for features at some point (early stages of P2) in this process, in my notes I begin to frame these new request as game design patterns, and try to theme them.
+Such complexity could be addressed by step by step instruction to build up experience with tools and concepts in a carefully structured way. However, I was keen to align with the motivational potential of hands-on (learning by experience) and choice driven approaches to project-based, STEM education [@holstermann_hands-activities_2010].  
 
-There were two main ways of approaching adding a new pattern. One to examine a code example which was built around the same code base. This would involve searching for new code constructs and notes in the code designed to orientate the learner, alerting them to the location and purpose of the relevant code.
+<!-- DOES THE LR EXPLORE THIS TENSION? -->
+<!-- PERHAPS? ILLUSTRATE THIS WITH A TRIANGLE - see notes 23.8.24 -->
 
- It is this approach that we see the child Toby adopt in the vignette presented in this chapter. The second approach was to use the longer form step by step help.
+**Summary of start of resolution**
 
-ILLUSTRATE THIS WITH A TRIANGLE - see notes 23.8.24
-In the AT illustration we see a tension between community, and objective. In a classroom this may normally be addressed by instruction. (perhaps PRIMM)
+In the development period (D1) between P1 and P2 I undertook extensive planning of both the starter template and documentation processes. The tension between learner agency and clarity of instruction and support reoccurs consistently in my notes at this time. My thinking was influenced by trials in P1 of whole class instruction of key coding concepts that I judged to be relevant to the whole group. My journal notes reflecting on these interventions were unfavourable, in that learners were not engaged, perhaps not seeing that instruction as immediately relevant, alien to their favoured hands on style of working, and as an interruption to the  flow of their making activities.
 
-However, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010]m and choice driven approaches to PBL.  
-DOES THE LR EXPLORE THIS TENSION?
+However, there had been a request from some from parents in the feedback to P1 (see appendix 4.x) to provide background concepts and explanations of coding constructs.
 
-Additionally, in P1 I trialled brief class instruction of key coding concepts, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable.
+To address this I wrote an instruction manual consisting of step-by-step series of instructional chapters detailing the structure of the core template. After completing this, I decided its linear structure, which prevented a learner-led approach, was unsuitable for use in sessions.
 
-This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
+LINK SENTENCE
 
-The process of creating documentation which created enough support for users to be able complete coding tasks but also facilitated participants to choose their on path presented significant challenges.
-
-
+The following section outline three main sources of documentation: quick start cards, written instructions and code snippets.
 
 <!--
 ![](./Pictures/quickstart_phaser_1.png){width=50%} -->
@@ -699,38 +696,60 @@ by Mozilla and the Phaser developers. -->
 
 ### Quick Start Cards
 
-NOTES: Created by students -
-
-After P1 I shared a revised design with computer trainee teacher computing students ( which one? ) as part of a subject knowledge enrichment programme. In response to a challenge to accelerate the design three students created printable word documents which highlighted key affordances of the design.
-
-Narrative of Js cards responding to delivering show case lessons to teacher trainers and in half term activities and more generally sharing the learning design.
-
-To address the limit of one-to-one facilitator support to seed the starting processes outlined in the section above, I used printable resources which highlighted the key lines of code and how they can be altered to impact on game behaviour(see figure 4.x below). These _quick start_ cards provoked a strongly scaffolded initial interaction with the code in a way strongly aligned with the use and modify stages of the UMC framework [@franklin_analysis_2020].
+During the development period D1, I used the revised template design in a one-off game making with computer trainee teacher computing students. I ended with a challenge to create an activity for one-off holiday activities around creative game coding for families. In response, three students created printable word documents highlighting key affordances of the design in a way which mirrored my facilitation of their game making session. Specifically, the printed resources highlighted the key lines of code and how they can be altered to impact on game behaviour (see figure 5.x below). These _quick start_ cards supported participants initial interaction with the code in a way strongly aligned with the _use_ and _modify_ stages of the UMC framework [@franklin_analysis_2020].
 
 ![](./Pictures/velocity_jscard.png){width=95%}
 4.x - Example of a Quick start card
 
+At this stage the options involved, the game mechanics of movement, jumping, level design, and final challenge to swap out the look of one or more of the characters by designing pixel art, and swapping out the line of code that adds the asset to the game. A current version of the quick start cards are availble online at the online technical repository for this study [^] ADD THE LINK HERE.
 
 
-### Structuring instructional tutorial chapters
+### Structuring instructional tutorial resources and code snippets
 
 <!-- BELOW Initially I structured the book chapter participants working their way through the online resources. HOW -->
 
 <!-- While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community. In chapter 5 I explore the extent to which these resources can scale for use beyond this context. -->
 
-MOVE SOME OF THE TEXT BELOW UP
+The quick start process helped resolved a key tensions concerting the issue of providing documentation with support for users to be able complete coding tasks but also facilitate choice over learner pathways. When revisiting the unsuitability of the step-by-step manual created in the D1 development period, I noted that the process of writing chapters yielded an interesting technique. For each new stage, I illustrated the concepts in practice using a new code playground project for each chapter, one which illustrated the key feature being added in as much isolation as possible but within a working game template.
 
-For each code example I created descriptive step-by-step documentation which in P2 were developed into chapters of an online book [^9]. Each code snippet linked to a descriptive chapter. These chapters attempted to balance an informal, hands-on approach over pre-teaching concepts, with the request from some from parents in the feedback to P1 (see appendix 4.x) to provide background concepts and explanations of coding constructs. To address this tension, in addition to self-contained chapter focused on instrumental code changes needed to implement game features, I created opening chapters of the online manual which were more traditional in format and explained underlying concepts that the starting template had initially abstracted away from the participants.
+I created a series of stand alone code playground projects which code snippets which mirrored the simplified approach of the quick start cards. Namely, with project listed the different feature it would add to the game and highlighted the snippets of code in the project needed to do this.
 
-### Code snippet examples
+Initially, learners were be directed to these stand alone code projects via a list in google docs. But as I rapidly created new projects I then added chapters to the existing instruction manual to act as stand-alone printable instructions to support the implementation of these code snippets[^9].
 
-The use of code snippets, while a promising authentic practice, presented initial challenges. To support a hands-on approach and responding the design choices of participants, I began by creating discreet code examples illustrating the requested elements. The use of code examples or snippets in code playgrounds is a common professional problem solving practice [@yang_stack_2017]. These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website and support forums, in line with other support sites like stack exchange, their utility has limitations including lack of relevant, consistency, being removed from the domain context, and not being structured in a self explanatory way [@treude_understanding_2017]. Thus, while I initially encouraged participants to search within these examples, and authentic documentation and help forums, the resulting confusion and difficulties experienced by participants, prompted me to create other more bespoke documentation.  
+Each code snippet linked to a descriptive chapter and vice-versa. To help students see the code in the correct structure, I began to create code snippets within code playgrounds and distinct project. These projects shared the structure of starter game template and added only the code needed for the additional requested functionality. My rationale was that each pattern added builds familiarity with the code structure.
+
+<!-- To address this tension, in addition to self-contained chapter focused on instrumental code changes needed to implement game features, I created opening chapters of the online manual which were more traditional in format and explained underlying concepts that the starting template had initially abstracted away from the participants. -->
+
+I also engaged in extensive ideation on my journal about how to best present these choices of features to learners in an accessible an potential playful way. A process of me introducing these print outs and linking them to a physical map is included as appendix 5.map.
+
+**Creating a hub for the  collection of game design patterns:** As introducing diverse forms of documentation and the resulting over complexity of the shared object of activity on a community level resulted in some users failing or struggling to find the right resources online, I designed and introduced a themed hub for both snippets and tutorial chapters. My aim was to mitigate potential learner alienation from unfamiliar technical documentation through accessible design which, in line with x, oriented access to documentation to participants existing gameplay experience rather than underlying coding constructs.
+
+
+
+![Pattern Collection](./Pictures/pattern_collection_1.png){width=95%}
+
+
+The use of code snippets, while a promising authentic practice, presented challenges which this careful curation of examples aimed to overcome. As explored in chapter two, while the use of code examples or snippets in code playgrounds is a common professional problem solving practice [@yang_stack_2017], their use in novice learning has limitations including lack of relevant, consistency, being removed from the domain context, and not being structured in a self explanatory way [@treude_understanding_2017]. While I initially encouraged participants to search within examples from the Phaser website, and authentic documentation and help forums, the resulting confusion and difficulties experienced by participants, prompted me to create other more bespoke documentation.  
+
+**Return to vignette**
+
+Returning to the vignette of the child Toby described earlyer in this chapter we can see him use, rather than the written step-by-step help, jump into the code example, searching for the new code constructs and in-line code comments notes in the code highlighting their purpose.
+
+MORE - Toby carefully scans...
+
+Thus, while not proof of overall efficacy of the use of code snippets the pattern of behaviour of Toby in the implementation of code is promising. IN TERMS OF ...
+
+
+<!-- These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website and support forums, in line with other support sites like stack exchange, their utility -->
 
 <!-- The competency to overlook the concrete differences in code structure to abstract the principles away and to then apply those principles to the existing structure of their code project seemed too ambitious for this group of novices. -->
 
-Creating a bespoke set of code snippets helped address the challenges described above. In P1 I responded by creating one off documents with the relevant code which were both printed, emailed and shared via google drive. In line with the practice of accessing help via code snippets, the code examples could be to be copied and pasted into the game. This process lacked coherent process for participants to navigation to the resource they need. The process also lacked a consistency in signposting how the code listed fit within the existing structure. To help students see the code in the correct structure, I began to create code snippets within code playgrounds and distinct project. These projects shared the structure of starter game template and added only the code needed for the additional requested f[@brase_knowledge_2024]unctionality. My rationale was that each pattern added builds familiarity with the code structure, a theory supported by observations of Toby's proficiency in the vignette above.
+<!-- Creating a bespoke set of code snippets helped address the challenges described above. In P1 I responded by creating one off documents with the relevant code which were both printed, emailed and shared via google drive. In line with the practice of accessing help via code snippets, the code examples could be to be copied and pasted into the game. This process lacked coherent process for participants to navigation to the resource they need. The process also lacked a consistency in signposting how the code listed fit within the existing structure.  -->
 
 
+
+
+<!-- a theory supported by observations of Toby's proficiency in the vignette above. -->
 
 <!-- As these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts.
 
@@ -749,17 +768,13 @@ Interestingly, the online menus was not used by participants in any regular or c
 <!-- As explored in the literature review, it is difficult to explore this pedagogical approach relation to other similar programmes due to the lack of data on specifics of the learning materials presented to participants. -->
 
 
+<!-- While time consuming, the process of aligning documentation, code snippets with more general concepts of game analysis, served to simplify the navigation of documentation.  -->
+
+<!-- IS THIS NEEDED?
+The guiding principle is that key affordances of the supporting secondary stimuli are designed to closely align with the objectives of leading activity at the predominant scope of activity.In the language of the theoretical framework, I explore the process of working with GPDs as a germ cell of the overall game making activity. -->
 
 
-### Theming the a collection of game design patterns to aid navigation
-
-Introducing documentation created additional tensions in the learning activity, specifically, I observed users failing or struggling to find the right resources online. This prompted me to design and introduce a themed hub for both snippets and tutorial chapters. My aim was to mitigate potential learner alienation from unfamiliar technical documentation through accessible design and to relating documentation to participants existing gameplay experience rather than underlying coding constructs. While time consuming, the process of aligning documentation, code snippets with more general concepts of game analysis, served to simplify the navigation of documentation. The guiding principle is that key affordances of the supporting secondary stimuli are designed to closely align with the objectives of leading activity at the predominant scope of activity.In the language of the theoretical framework, I explore the process of working with GPDs as a germ cell of the overall game making activity.
-
-
-![Pattern Collection](./Pictures/pattern_collection_1.png){width=95%}
-
-
-INTRO SENTENCE
+INTRO SENTENCE?
 
 The process of theming the patterns has the potential to develop the community knowledge of game making concepts [@holopainen2007teaching]. In grouping the game design patterns into categories for the documentation hub page, I drew on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003]. Schnell's detailed analysis of tens of game elements presented as design lenses was too complex for this audience. Instead, I adapted a simplified introductory framework developed for use in youth-oriented Game Jams to help novice game makers hack/analysis and then adapt key elements of non-digital games [@cornish_game_2018].
 
